# procinfo

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile
include/: enumerate_process.hpp  header.hpp  process.hpp
sandbox/: main.cpp
src/: enumerate_process.cpp  process.cpp
